--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     - cron: "0 0 * * 1"
   push:
+    branches:
+        - main
 jobs:
   push:
     name: "yolks:bun_${{ matrix.tag }}"
