--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,5 +34,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/yolks:bun_${{ matrix.tag }}
-            ${{ format('ghcr.io/corebytee/yolks:bun_{0}', matrix.tag) }}
+            ghcr.io/${{ github.repository_owner.toLowerCase() }}/yolks:bun_${{ matrix.tag }}
