--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,4 +34,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner.toLowerCase() }}/yolks:bun_${{ matrix.tag }}
+            ghcr.io/corebyte/yolks:bun_${{ matrix.tag }}
