--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,34 @@
 name: build bun yolk
+
 on:
   workflow_dispatch:
+
   schedule:
     - cron: "0 0 * * 1"
+
   push:
     branches:
         - main
+
 jobs:
   push:
     name: "yolks:bun_${{ matrix.tag }}"
+
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+
     strategy:
       fail-fast: false
       matrix:
         tag:
           - latest
           - canary
+
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-qemu-action@v3
